syntax = "proto3";

option java_package = "com.adtiming.om.pb";
option java_outer_classname = "AdNetworkPB";
import "common.proto";

message AdNetwork {
    int32 id = 1; // adn id
    string name = 2; //
    string class_name = 3; // SDK className prefix, used by /conf?v7
    int32 type = 4; // 二进制,0:Banner,1:Native,2:Video,3:Interstitial;
    string sdk_version = 5;
    string bid_endpoint = 6; // S2S BidEndpointURL
    string descn = 7; // Description
    int32 bid_type = 8;//0:非Bid,1:s2s,2:c2s,3:非标c2s
    int32 expired_time = 9;
}

message AdNetworkApp {
    int32 id = 1; // 自增ID
    int32 adn_id = 2; //
    int32 pub_app_id = 3;
    string app_key = 4; //
    //ABTest abt = 5; // ab_test_mode
    repeated AdNetworkAppBlockRule block_rules = 6;
}

message AdNetworkAppBlockRule {
    int32 id = 1;
    int32 pub_app_id = 2;
    int32 adn_id = 3; //
    string sdk_version = 4;
    string osv_max = 5;
    string osv_min = 6;
    repeated string make_device_blacklist = 7;
    repeated string brand_model_blacklist = 8;
    string app_version = 9;
}

message Instance {
    int32 id = 1; // 自增ID
    int32 pub_app_id = 2; //
    int32 placement_id = 3; //
    int32 adn_id = 4;
    string placement_key = 5; //
    string app_unit_id = 6;
    string osv_max = 7;
    string osv_min = 8;
    repeated string make_whitelist = 9;
    repeated string make_blacklist = 10;
    repeated string brand_whitelist = 11;
    repeated string brand_blacklist = 12;
    repeated string model_whitelist = 13;
    repeated string model_blacklist = 14;
    int32 frequency_cap = 15;
    int32 frequency_unit = 16;
    int32 frequency_interval = 17;
    bool hb_status = 18; // HeadBidding 开关
    //ABTest abt = 19; // ab_test_mode
    float ecpm = 19; // SDK-BID ecpm固定价分成

    map<string, CountrySettings> country_settings = 20;

    string name = 21;

    map<string, float> country_manual_ecpm = 22;

    message CountrySettings {
        map<int32, int32> period = 1;
    }

}

message InstanceRule {
    int32 id = 1;
    int32 publisher_id = 2;
    int32 pub_app_id = 3;
    int32 placement_id = 4;
    repeated string country = 5;
    int32 sort_type = 6; //排序类型,0:使用权重;1:使用绝对优先级
    ABTest abt = 7;
    int32 auto_switch = 8; //自动优化开关
    map<int32, int32> instance_weight = 9;
    int32 priority = 10;

    // Segment Conditions
    int32 frequency = 11; // 用户当天展现次数
    int32 con_type = 12; // 连接类型,二进制,从右到左(低位起) wifi,2G,3G,4G
    repeated string brand_whitelist = 13;
    repeated string brand_blacklist = 14;
    repeated string model_whitelist = 15;
    repeated string model_blacklist = 16;
    float iap_min = 17;
    float iap_max = 18;

    // 2020-05-14
    int32 model_type = 19; // 设备类型定向二进制表示, 0无定向, bit pos {0:Phone,1:Pad,2:TV}
    bool channel_bow = 20; // channel 定向方式, 0:黑名单,1:白名单
    repeated string channel = 21; //  国内Android channel 定向, 换行分隔
    int32 gender = 22;
    repeated string interest = 23;

    // 2020-07-06
    int32 age_min = 24;
    int32 age_max = 25;
    // 2021-03-04
    string name = 26;
    repeated string osv_white = 27;
    repeated Range osv_range = 28;
    repeated string sdkv_white = 29;
    repeated Range sdkv_range = 30;
    repeated string appv_white = 31;
    repeated Range appv_range = 32;
    int32 require_did = 33; //需要非空deviceId, 0:No,1:Yes
    map<string, CustomTag> custom_tags = 34;
    int32 algorithm_id = 35; // ECPM预估算法ID om_ecpm_algorithm.id
    repeated InstanceRuleGroup groups = 36;
}

message InstanceRuleGroup {
    int32 rule_id = 1;
    int32 group_id = 2;
    int32 group_level = 3;
    int32 auto_switch = 4;
    repeated InstanceRuleMediation instance_weight = 5;
}

message InstanceRuleMediation {
    int32 rule_id = 1;
    int32 group_id = 2;
    int32 instance_id = 3;
    int32 priority = 4;
}

message CustomTag {
    string name = 1;
    int32 type = 2; // 0:string, 1:int, 2:float, 3:version
    repeated TagCondition conditions = 3;
}

message TagCondition {
    string operator = 1; // >|>=|<|<=|=|!=|in|notin
    string value = 2;
    repeated string values = 3; // in|notin时多值使用
}

